fix company name alignment

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -135,6 +135,9 @@ h5 {
     }
     .companyname {
         margin: 0.2em 0 2em;
+        float: left;
+        width: 100%;
+        display: block;
         a {
             &:hover {
                     text-decoration: none;
